add env vars for drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -5,9 +5,15 @@ name: default
 steps:
   - name: build
     image: golang
+    environment:
+      TVDB_API_KEY:
+        from_secret: tvdb_api_key
+      TVDB_API_URL:
+        from_secret: tvdb_api_url
+      TVDB_API_TOKEN:
+        from_secret: tvdb_api_token
     commands:
-      - go test -v ./...
-      - go build
+      - make test lint
 
 trigger:
   branch:
