just test for now, others depend on docker which isn't available by default in drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
       TVDB_API_TOKEN:
         from_secret: tvdb_api_token
     commands:
-      - make test lint
+      - make test
 
 trigger:
   branch:
